tests/errors/macro/parser_set_need_ident/separators_behind_define.c
#define       			   

int main()
{
	return 0;
}
